// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test header renders correctly closed 1`] = `
<div
  className="css-1li01za"
>
  <div
    className="css-96p7xp"
  >
    <div
      className="css-gmuwbf"
    >
      <svg
        aria-label="Toggle sidebar"
        className="chakra-icon css-1lkjvgo"
        fill="currentColor"
        focusable={false}
        height="1em"
        onClick={[Function]}
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </div>
    <div
      className="css-1wzaiav"
    />
  </div>
</div>
`;

exports[`Test header renders correctly open 1`] = `
<div
  className="css-1li01za"
>
  <div
    className="css-96p7xp"
  >
    <div
      className="css-gmuwbf"
    >
      <svg
        aria-label="Toggle sidebar"
        className="chakra-icon css-na4eyy"
        fill="currentColor"
        focusable={false}
        height="1em"
        onClick={[Function]}
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </div>
    <div
      className="css-1wzaiav"
    />
  </div>
</div>
`;
